# logotip-kiosk

./: .gitignore  README.md  astro.config.mjs  netlify.toml  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
public/: manifest.json  offline.html  sw.js
scripts/: generate-static-site.mjs  generateCatalogue.mjs  optimize-images.mjs  update-image-paths.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  manifest.json  page.tsx
src/app/[category]/: page.tsx
src/app/[category]/[subcategory]/: page.tsx
src/app/design/[id]/: DesignPageClient.tsx  page.tsx
src/app/offline/: page.tsx
src/components/: AnimatedLayout.tsx  AssetPreloader.tsx  BackButton.tsx  BackButtonScript.astro  CategoryCard.tsx  CategoryPageClient.tsx  DesignCard.tsx  DesignDetail.tsx  DesignGrid.tsx  GridScript.astro  HomePageClient.tsx  IdleRedirect.astro  IdleRedirect.tsx  KioskMode.tsx  NavigationBreadcrumb.tsx  OfflineErrorBoundary.tsx  PWAHandler.tsx  Pagination.tsx  SubcategoryPageClient.tsx
src/data/: catalogue.json  types.ts
src/hooks/: useSwipeGesture.ts
src/layouts/: Layout.astro
src/lib/: catalogue.ts
src/pages/: 404.astro  index.astro
src/pages/[category]/: [subcategory].astro  index.astro
src/pages/design/: [id].astro
src/styles/: globals.css
src/utils/: imageLoader.ts
